components/cartography/deployment/neo4j/overlays/baremetal/neo4j-statefulset.yaml
---
apiVersion: 'apps/v1'
kind: StatefulSet
metadata:
  name: neo4j-statefulset
spec:
  volumeClaimTemplates:
    - metadata:
        name: datadir
        annotations:
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: neo4j-storage
        resources:
          requests:
            storage: '1Gi'
