components/cartography/deployment/neo4j/overlays/baremetal/neo4j-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neo4j-ingress
  annotations:
    kubernetes.io/ingress.class: haproxy
  labels:
    certmanager.k8s.io/provider: cluster
    cert-manager.io/provider: cluster
spec:
  rules:
    # Replace with IP of host
    - host: neo4j.192.168.1.151.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: neo4j-service
                port:
                  number: 7474
  tls:
    - hosts:
        - neo4j.192.168.1.151.nip.io
      secretName: neo4j-web-tls

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neo4j-ingress-bolt
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
    # Replace with IP of host
    - host: bolt.192.168.1.151.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: neo4j-bolt-service
                port:
                  number: 7687
  tls:
    - hosts:
        - bolt.192.168.1.151.nip.io
      secretName: neo4j-web-tls
